# DOROTHEA

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.attacker  Dockerfile.collector  Dockerfile.dorothea  Dockerfile.exporter  Dockerfile.kali-port-scan  README.md  docker-compose.example.yml  docker-compose.port-scan.yml  docker-compose.yml  dorothea-pmacctd.conf  hostile_actions.yml  pyproject.toml  requirements.txt  vanilla_actions.yml
.github/workflows/: docker-image.yml  dorothea.yml  examples.yml
containers/: node_daemon.py
containers/hostile_node/: Dockerfile  requirements.txt
containers/hostile_node/user_actions_scripts/: port_scan.py
containers/netflow_collector/: Dockerfile
containers/netflow_exporter/: Dockerfile
containers/vanilla_node/: Dockerfile  requirements.txt
containers/vanilla_node/user_actions_scripts/: botjitmeet.py  mail.py  selenium_test.py  ssh.py  surffing_web.py
dorothea/: Colors.py  Dorothea.py  UserActions.py  __init__.py  __main__.py  dorothea.py  dorothea_pretty.py  dorotheacore.py  rabbitloader.py  utils.py
examples/: Dockerfile.guineapig
examples/denial-of-service/: Dockerfile.attacker  Dockerfile.guineapig  docker-compose.yml
examples/port-scan/: Dockerfile.attacker  README.md  docker-compose.yml
examples/ssh-brute-force/: Dockerfile.attacker  README.md  docker-compose.yml
labs/: README.md  config.yaml  run.py
labs/lab_attacks/: README.md  docker-compose.yml
labs/lab_attacks/attacker/: Dockerfile  start.sh
labs/lab_attacks/attacks/: celery.py  run_tasks.py  (+3 more)
labs/lab_normal/: README.md  docker-compose.yml
(+50 files in other folders)
